Fix #386 (Significant whitespace-only text node in report HTML does not have style) (#387)

--- a/src/reporter/test-report.css
+++ b/src/reporter/test-report.css
@@ -326,9 +326,9 @@ a.img:hover, a.img:active {
 }
 
 .whitespace {
-	font-style: italic;
+	/*font-style: italic;*/
 	color: #999;
-	background: white;
+	/*background: white;*/
 }
 
 .ellipsis {
